--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+0.7.1:
+- Request throttling for /api
+- Allow overriding the VERSION variable
+- Docker release command
+
 0.6.7: bugfix release
 - BUGFIX: syncing from the /api/datasets route should sync manifest options
 - sync for LX brand images
