--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+0.7.2: nginx to the rescue
+- Add nginx in front of dsapid
+
 0.7.1:
 - Request throttling for /api
 - Allow overriding the VERSION variable
